# BookStore

./: .env.dev  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  env.dev  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: heroku-deploy.yml  workflow-pr.yml
bookStore/: apps.py  asgi.py  settings.py  urls.py  views.py
bookStore/migrations/: 0001_initial.py
order/: factories.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: __init__.py  test_order_viewset.py
product/: factories.py
product/serializers/: product_serializers.py
product/test/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
social/: settings.py  urls.py
