[tool.poetry]
name = "bookStore"
version = "0.1.0"
description = "BookStore API"
authors = ["Eduardo Rodrigues <eduardobrasil2706@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.13"
pytest = "^8.3.2"
factory-boy = "^3.3.0"
django = "^4.2"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"
flake8 = "^7.1.1"
whitenoise = "^6.7.0"
gunicorn = "^23.0.0"
gitpython = "^3.1.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
